package Application;

import Controller.MainController;

import javax.swing.*;

public class Application {
    public static void main(String[] args) throws InterruptedException {
        //new JFrame("My app").setVisible(true);
        MainController mainController = new MainController();
    }
}
