@startuml

title __CLIENT's Class Diagram__\n

  namespace Application {
    class Application.Application {
    }
  }
  

  namespace Controller {
    class Controller.AdministratorController {
    }
  }
  

  namespace Controller {
    class Controller.CoordinatorViewController {
    }
  }
  

  namespace Controller {
    class Controller.LoginViewController {
    }
  }
  

  namespace Controller {
    class Controller.MainController {
    }
  }
  

  namespace Controller {
    class Controller.PostmanViewController {
    }
  }
  

  namespace Controller {
    class Controller.ServerCommunication {
    }
  }
  

  namespace View {
    class View.AdministratorView {
    }
  }
  

  namespace View {
    class View.ComboBoxRenderer {
    }
  }
  

  namespace View {
    class View.CoordinatorView {
    }
  }
  

  namespace View {
    class View.LoginView {
    }
  }
  

  namespace View {
    class View.PostmanView {
    }
  }
  

  Controller.AdministratorController o-- View.AdministratorView : administratorView
  Controller.AdministratorController o-- Controller.MainController : mainController
  Controller.AdministratorController o-- Controller.ServerCommunication : serverCommunication
  Controller.CoordinatorViewController o-- Controller.MainController : mainController
  Controller.CoordinatorViewController o-- View.CoordinatorView : coordinatorView
  Controller.CoordinatorViewController o-- Controller.ServerCommunication : serverCommunication
  Controller.LoginViewController o-- View.LoginView : loginView
  Controller.LoginViewController o-- Controller.ServerCommunication : serverCommunication
  Controller.MainController o-- Controller.AdministratorController : administratorController
  Controller.MainController o-- Controller.ServerCommunication : communication
  Controller.MainController o-- Controller.CoordinatorViewController : coordinatorViewController
  Controller.MainController o-- Controller.LoginViewController : loginViewController
  Controller.MainController o-- Controller.PostmanViewController : postmanViewController
  Controller.PostmanViewController o-- Controller.MainController : mainController
  Controller.PostmanViewController o-- View.PostmanView : postmanView
  Controller.PostmanViewController o-- Controller.ServerCommunication : serverCommunication
  Controller.ServerCommunication o-- Controller.MainController : mainController
  View.AdministratorView -up-|> javax.swing.JFrame
  View.ComboBoxRenderer -up-|> javax.swing.DefaultListCellRenderer
  View.CoordinatorView -up-|> javax.swing.JFrame
  View.LoginView -up-|> javax.swing.JFrame
  View.PostmanView -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
